# SO2_202003585

./: .gitignore  CMakeLists.txt
Practica1/: README.md  exec  practica1  practica1.c
Practica1/headers/: fileHandler.h
Practica1/src/: childProcess.c  fileHandler.c  main.c  trace.stp
Practica2/: README.md  compile-command.txt  estado_cuentas_2024_03_16-15_00_15.csv  users.csv
Practica2/src/: data_loader.c  main.c  menus.c  operations.c  utils.c
Practica2/src/include/: data_loader.h  menus.h  operations.h  structures.h  utils.h
